2005-11-10  Lluis Sanchez Gual  <lluis@novell.com> 

	* csproj_ver2003.cs: Fixed some fields (patch by Jim Albert).
	* PrjHelper.cs:	
	* prj2make-sharp-lib-Commands.cs: Show a progress monitor while importing.
	Other minor fixes.
	* MsPrjHelper.cs: Use the MonoDevelop.Projects api to generate the projects.
	Many other bug fixes.
	* prj2make-sharp-lib.addin.xml: Added new dependency.
	* Makefile.am: Added new assembly references.

2005-10-10  Lluis Sanchez Gual  <lluis@novell.com> 

	* prj2make-sharp-lib.addin.xml: Fixed addin header information.
	Use "id" attribuet instead of "name" to identify addins.

2005-10-04  Lluis Sanchez Gual  <lluis@novell.com> 

	* prj2make-sharp-lib.addin.xml: Added addin dependencies.

2005-06-28  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (FILES): Move AssemblyInfo.cs ...
	(GENERATED_FILES): ... here.

2005-04-25  Lluis Sanchez Gual  <lluis@novell.com>

	* prj2make-sharp-lib.addin.xml:
	* prj2make-sharp-lib-Commands.cs: Use the new syntax for defining
	commands and implementing commands.

2005-04-17  John Luke  <john.luke@gmail.com>

	* Makefile.am: fix distcheck

2005-03-18  Francisco "Paco" Martinez <paco@mfcon.com>
	* MsPrjHelpe.cs: 
	Mono 2.0 has been commented out until further notice.
	Gtk# 2.0 is searched first for a match otherwise it goes to Gtk# 1.0
	Added Gecko# 2.0 (0.7) is searched first for a match otherwise it goes to Gecko# 1.0 (0.6)
	
	* MsPrjHelper.cs and MdPrjHelper.cs:
	I also included the changes inside the patch in http://bugzilla.ximian.com/show_bug.cgi?id=73705.

2004-08-07  Todd Berman  <tberman@off.net>

	* AssemblyInfo.cs.in: Use new ASSEMBLY_VERSION variable.

2004-06-17  John Luke  <jluke@cfl.rr.com>

	* Makefile.am: add reference to MonoDevelop.Gui.Widgets
	* *.Makefile: remove generated makefile from svn
	* prj2make-sharp-Commands.cs : use MonoDevelop.Gui.Widgets.FileSelector
	instead of Gtk.FileSelection

2004-06-14  Francisco "Paco" Martinez <paco@mfcon.com>
	